tasks: add solution for task 9